@@ -21,7 +21,7 @@ $(srcdir)/sed.texi: sed-in.texi $(srcdir)/groupify.sed
 
 sed.1: $(top_srcdir)/sed/sed.c $(top_srcdir)/configure.ac $(srcdir)/sed.x
 	$(HELP2MAN) --name "stream editor for filtering and transforming text" \
-	  -p sed --include $(srcdir)/sed.x $(SED) > $(srcdir)/sed.1
+	  -p sed --include $(srcdir)/sed.x -o $(srcdir)/sed.1 $(SED) 
 
 dist-hook:
 	touch $(distdir)/sed.1
